# nvLibPlayground

./: .gitignore  README.md
cudnnpg/: convolution.cpp
gpuedge/: martix_multi.cpp
gpuinfos/: list_all_gpu.cpp
ncclpg/: gather.cpp
precision/: .gitignore  CMakeLists.txt  fp32_to_int8.cpp  tf32_and_fp32.cpp
simple_classification/: .gitattributes  data.pkl  infer.py  input.py  model.pth  model_param.py  nn_plain_compute.py  quantize.py  train_code.py  vectorizer.pkl  vocabulary.json  weights.json
simple_classification/cpu_implementation/: read_weights.cpp
simple_transformer/: base_bert_config.json  export_model_params.py  infer_by_pipeline.py  train_base_bert.py
tensorpg/: compare_fp16.cpp
